Maybe fixed the background on iPhones

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -25,6 +25,12 @@
 
 @media only screen and (max-width: 480px)
 {
+  /* ---- Header ---- */
+  header { background-attachment: scroll }
+
+  /* ---- Footer ---- */
+  footer { background-attachment: scroll }
+
   /* ---- Reused Components ---- */
   body { width: 100vw; }
   h1 { font-size: 200%; }
